modified footer and cont. on alignment bug

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h2 h5 {
   font-family: 'Thasadith', sans-serif;
 }
 
-p {
+span, p {
   font-weight: bold;
   font-size: large;
   font-family: 'Thasadith', sans-serif;
@@ -92,25 +92,14 @@ hr {
   flex: 0 0 auto;
 }
 
-
 .grey-background {
   background-color:#f7f7f7;
-  padding-bottom: 20px;
-  padding-top: 20px;
-  border-bottom: 1px solid grey;
-}
-
-.footer {
-  bottom: 0;
-  width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f7f7f7;
-  margin-top: 100px;
+  padding: 20px;
 }
 
 .footer-text {
   font-family: 'Thasadith', sans-serif;
+  margin-bottom: 0;
 }
 
 .st {
@@ -136,6 +125,7 @@ hr {
 
  .gallery-container {
   padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 
@@ -186,7 +176,6 @@ i {
 
 .hair-options-header {
   font-size: 50px;
-  text-align: center;
 }
 
 .hair-options {
@@ -200,5 +189,4 @@ i {
 
 .hair-options-notes {
   font-size: 35px;
-  text-align: center;
 }
